basic.html and scripts.js

--- a/Lab1/basic.html
+++ b/Lab1/basic.html
@@ -2,16 +2,22 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <title>Lab-1</title>
         <title></title>
     </head>
     <body>
         <div>
-            <h1>The Harvards facts Book</h1>
+            <h1>The Harvards facts Book</h1> <!--Top level heading-->
+        </div> 
+        <div id="content">
+            <!--An empty div-->
         </div>
+        <div><a href="https://www.google.com/">Harvard University</a></div>
+        <!--A hyperlink to another page-->
+        <div><img src="/harvard.png"></div> <!--An image-->
         <div>
-
+            <button class="btn btn-primary"  id="cs171-basics" type="button">Click me!</button>
         </div>
-        <div><a href="https://www.google.com/">This is a Hyperlink</a></div>
-        <div><img src="/harvard.png"></div>
+        <script src="scripts.js"></script>
     </body>
 </html>
