basic: adding Hyper text

--- a/Lab1/basic.html
+++ b/Lab1/basic.html
@@ -12,7 +12,7 @@
         <div id="content">
             <!--An empty div-->
         </div>
-        <div><a href="https://www.google.com/">Harvard University</a></div>
+        <div><a href="https://www.harvard.edu/">Harvard University</a></div>
         <!--A hyperlink to another page-->
         <div><img src="/harvard.png"></div> <!--An image-->
         <div>
