--- a/Lab1/basic.html
+++ b/Lab1/basic.html
@@ -3,20 +3,26 @@
     <head>
         <meta charset="UTF-8">
         <title>Lab-1</title>
+        <meta viewport ="width=device-width" >
+        <link rel="stylesheet" type="text/css" href="/main.css">
         <title></title>
     </head>
     <body>
         <div>
             <h1>The Harvards facts Book</h1> <!--Top level heading-->
         </div> 
+        <div>
+            <a href="https://www.harvard.edu/">Harvard University</a>
+        </div>
+        <!--A hyperlink to another page-->
+        <br>
+        <div class="harv-img"><img src="/harvard1.jpg"></div> <!--An image-->
+        <div class="harv-img"><img src="/harvard2.jpg"></div>
+        <div>
+            <button class="btn btn-primary"  id="cs171-basics" type="button">Get a random fact about Harvard University</button>
+        </div>
         <div id="content">
             <!--An empty div-->
-        </div>
-        <div><a href="https://www.harvard.edu/">Harvard University</a></div>
-        <!--A hyperlink to another page-->
-        <div><img src="/harvard.png"></div> <!--An image-->
-        <div>
-            <button class="btn btn-primary"  id="cs171-basics" type="button">Click me!</button>
         </div>
         <script src="scripts.js"></script>
     </body>
