--- a/Lab1/basic.html
+++ b/Lab1/basic.html
@@ -3,24 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <title>Lab-1</title>
-        <meta viewport ="width=device-width" >
+        <meta name="viewpoint" content="width=device-width" >
         <link rel="stylesheet" type="text/css" href="/main.css">
         <title></title>
     </head>
     <body>
         <div>
-            <h1>The Harvards facts Book</h1> <!--Top level heading-->
+            <h1>The Harvards Facts Book</h1> <!--Top level heading-->
         </div> 
-        <div>
+        <!--<div>
             <a href="https://www.harvard.edu/">Harvard University</a>
-        </div>
+        </div> -->
         <!--A hyperlink to another page-->
         <br>
-        <div class="harv-img"><img src="/harvard1.jpg"></div> <!--An image-->
-        <div class="harv-img"><img src="/harvard2.jpg"></div>
+        <div><img class="harv-img1" src="/harvard1.jpg"></div><!--An image-->
+        <div><img  class="harv-img1" src="/harvard2.jpg"></div>
         <div>
             <button class="btn btn-primary"  id="cs171-basics" type="button">Get a random fact about Harvard University</button>
-        </div>
+        </div><br>
         <div id="content">
             <!--An empty div-->
         </div>
