--- a/Lab1/basic.html
+++ b/Lab1/basic.html
@@ -8,8 +8,14 @@
         <title></title>
     </head>
     <body>
+        <div class="nav">
+            <a class="nav-cs171" href="#">CS171-Basics</a>
+            <a class="nav-website" href="#">CS171.org</a>
+            <a class="nav-resources" href="#">Resources</a>
+        </div>
+        <div class="wrap">
         <div>
-            <h1>The Harvards Facts Book</h1> <!--Top level heading-->
+            <h1>The Harvards FactBook</h1> <!--Top level heading-->
         </div> 
         <!--<div>
             <a href="https://www.harvard.edu/">Harvard University</a>
@@ -23,7 +29,7 @@
         </div><br>
         <div id="content">
             <!--An empty div-->
-        </div>
+        </div></div>
         <script src="scripts.js"></script>
     </body>
 </html>
