--- a/Lab1/basic.html
+++ b/Lab1/basic.html
@@ -30,6 +30,9 @@
         <div id="content">
             <!--An empty div-->
         </div></div>
+        <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
         <script src="scripts.js"></script>
     </body>
 </html>
