index: adding css and js

--- a/Hw1/index.html
+++ b/Hw1/index.html
@@ -1,1 +1,11 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <title>Home work 1</title>
+        <meta name="Viewpoint" content="width=device-width">
+        <link rel="stylesheet" type="text/css" href="/css/main.css">
+    </head>
+    <body>
+        <script src="/js/script.js"></script>
+    </body>
+</html>
