index: adding table

--- a/Hw1/index.html
+++ b/Hw1/index.html
@@ -2,10 +2,61 @@
 <html>
     <head>
         <title>Home work 1</title>
+        <meta name="description" content="Cs171 Ashwin Muthiah Home work 1">
         <meta name="Viewpoint" content="width=device-width">
         <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
     <body>
+        <table>
+            <tr>
+                <th>Country</th>
+                <th>1990</th>
+                <th>2000</th>
+                <th>2014</th>
+            </tr>
+            <tr>
+                <td>Central Africa Republic</td>
+                <td>51.9</td>
+                <td>51.4</td>
+                <td>46.4</td>
+            </tr>
+            <tr>
+                <td>Chad</td>
+                <td>65</td>
+                <td>52</td>
+                <td>46.4</td>
+            </tr>
+            <tr>
+                <td>Haite</td>
+                <td>52.1</td>
+                <td>42.8</td>
+                <td>37.3</td>
+            </tr>
+            <tr>
+                <td>Madagascar</td>
+                <td>44.8</td>
+                <td>44.1</td>
+                <td>36.3</td>
+            </tr>
+            <tr>
+                <td>sierra Leone</td>
+                <td>58.8</td>
+                <td>53.5</td>
+                <td>38.9</td>
+            </tr>
+            <tr>
+                <td>East Timor</td>
+                <td>-</td>
+                <td>-</td>
+                <td>40.7</td>
+            </tr>
+            <tr>
+                <td>Zambia</td>
+                <td>47</td>
+                <td>50.9</td>
+                <td>41.1</td>
+            </tr>
+        </table>
         <script src="/js/script.js"></script>
     </body>
 </html>
