--- a/Hw1/index.html
+++ b/Hw1/index.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
     <body>
-        <table>
+        <table class="sortable">
+            <caption>Global Hunger Index (GHI)</caption>
             <tr>
                 <th>Country</th>
                 <th>1990</th>
@@ -58,5 +59,6 @@
             </tr>
         </table>
         <script src="/js/script.js"></script>
+        <script src="/js/sorttable.js"></script>
     </body>
 </html>
