--- a/Hw1/index.html
+++ b/Hw1/index.html
@@ -4,6 +4,7 @@
         <title>Home work 1</title>
         <meta name="description" content="Cs171 Ashwin Muthiah Home work 1">
         <meta name="Viewpoint" content="width=device-width">
+        <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
     <body>
@@ -58,7 +59,7 @@
                 <td>41.1</td>
             </tr>
         </table>
-        <script src="/js/script.js"></script>
         <script src="/js/sorttable.js"></script>
+        <script src="/js/script.js"></script>
     </body>
 </html>
