--- a/Lab2/index.html
+++ b/Lab2/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
-    <title>Lab2 - Activity 1</title>
+    <title>Lab2</title>
 </head>
 <body>
+    <div id="lab2_a2"></div>
     <script type="text/javascript" src="/scripts.js"></script>
 </body>
