--- a/Hw2/index.html
+++ b/Hw2/index.html
@@ -12,6 +12,23 @@
 	</head>
 	<body>
 		<div id="stats"></div>
+		<div id="chart-area"></div>
+		<div id="selections-1">
+			<select id="user-area" onchange="createVisualization()">
+				<option value="All">All</option>
+				<option value="Boston">Boston</option>
+				<option value="Cambridge">Cambridge</option>
+				<option value="Somerville">Somerville</option>
+				
+			</select>
+		</div>
+		<div id="selections-2">
+				<select id="user-order-type" onchange="createVisualization()">
+					<option value="All">All</option>
+					<option value="web">Web</option>
+					<option value="phone">Phone</option>
+				</select>
+		</div>
 	
 	
 
