Basic_working_model

--- a/Hw3/index.html
+++ b/Hw3/index.html
@@ -7,7 +7,25 @@
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
-<body>
+<body><br>
+    <div class="row">
+        <div class="col-md-6">
+            <div id="chart-holder"></div>
+        </div>
+        <div class="col-md-3">
+            <div id="details-holder">
+                <div id="building"></div>
+                <div id="city"></div>
+                <div id="country"></div>
+                <div id="floor"></div>
+                <div id="completed"></div>
+            </div>
+            <div class = "col-md-4">
+                <img id="image">
+            </div>
+        </div>
+        
+    </div>
 
 <!-- Loading Javascript libraries-->
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
@@ -15,5 +33,5 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/d3.min.js"></script>
 <!-- Loading main Javascript -->
-    <script src="js/main.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
