--- a/HW4/index.html
+++ b/HW4/index.html
@@ -1,4 +1,18 @@
 <!DOCTYPE html>
 <head>
     <title>Homework 4</title>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/main.css">
 </head>
+<body>
+    
+
+    <!-- Loading libraries -->
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
+    <script src="/js/bootstrap.js"></script>
+    <script src="/js/d3.js"></script>
+
+    <!-- Loading Main JS file-->
+    <script src="/js/scripts.js"></script>
+</body>
