--- a/HW4/index.html
+++ b/HW4/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <head>
     <title>Homework 4</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-    
+    <br>
+    <div class="wrap">
+        <div class="row">
+            <div class="col-md-6" id="Area-chart"></div>
+            <div class="col-md-6" id="Bar-Chart"></div>
+        </div>
+    </div>
 
     <!-- Loading libraries -->
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
     <script src="/js/bootstrap.js"></script>
-    <script src="/js/d3.js"></script>
+    <script src="/js/d3.min.js"></script>
 
     <!-- Loading Main JS file-->
     <script src="/js/scripts.js"></script>
