--- a/Murray_Data_Viz/ch_9/d3/index.html
+++ b/Murray_Data_Viz/ch_9/d3/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div id="bar-area"></div>
-        <p>Click on this text to update the chart with new data values (once).</p>
+        <p>Click on this text to update the chart with new data values as many time you like !</p>
         <!-- inclusing libraries -->
         <script src="/d3.js"></script>
         <script src="/main.js"></script>
