--- a/Hw5/index.html
+++ b/Hw5/index.html
@@ -17,6 +17,15 @@
 		<h2>All Time Statistics</h2>
 
 		<!-- Parent container for the visualization -->
+		<div class="selection-box">
+			<select id="selection">
+				<option value="GOALS">Goals</option>
+				<option value="AVERAGE_GOALS">Average Goals</option>
+				<option value="MATCHES">Matches</option>
+				<option value="TEAMS">Teams</option>
+				<option value="AVERAGE_ATTENDANCE">Average Attendance</option>
+			</select>
+		</div>
 		<div id="chart-area"></div>
 
 	</div>
