--- a/Hw5/index.html
+++ b/Hw5/index.html
@@ -25,6 +25,11 @@
 				<option value="TEAMS">Teams</option>
 				<option value="AVERAGE_ATTENDANCE">Average Attendance</option>
 			</select>
+		</div><br>
+		<div class="row">
+			<div class="col-md-2"><input type="text" class="form-control" value="1930" id="startYear" /></div>
+			<div class="col-md-2"><input type="text" class="form-control" value="2014" id="EndYear" /></div>
+			<div class="col-md-2"> <button type="button" class="btn btn-default" id="button" onclick="updateVisualization()">Filter</button></div>
 		</div>
 		<div id="chart-area"></div>
 
